# binary-function-definition

./: loopunroll.mlir  test.mlir
include/Compiler/Dialect/nova/: NovaOps.td
include/Compiler/Transforms/: CMakeLists.txt
include/Compiler/Transforms/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.h  CMakeLists.txt  Passes.h  Passes.td
include/Compiler/Transforms/Arith/: CMakeLists.txt  Canonicalizer.cpp  Canonicalizer.h
lib/Dialect/nova/: NovaOps.cpp
tools/nova-opt/: CMakeLists.txt  nova-opt.cpp
